add item counter badge on smaller screens

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -18,7 +18,10 @@
     @apply border-2 shadow-sm border-gray-100 w-auto;
 }
 .badge-counter{
-    @apply text-xs rounded-full px-2 py-1 h-1 w-2 align-top -ml-6 text-white;
+    @apply text-xs rounded-full px-2 py-1 h-1 w-2 align-text-top -ml-6 text-white;
+}
+.badge{
+    @apply text-xs rounded-full px-2 py-1 h-1 w-2 text-white;
 }
 
   
