fix sidebar height and hide scroll-product description(productListView)

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
 .custom-scroll{
     overflow-y: scroll;
 }
+.custom-scroll::-webkit-scrollbar {
+  display: none;
+}
+
 .custom-scroll-with-handle::-webkit-scrollbar {
     width: 5px;
     height: .75rem;
